animate and transition properly

--- a/test/index.jade
+++ b/test/index.jade
@@ -3,7 +3,7 @@ html(lang="en")
    head
       title Herosheets Gallery
       link(href="./css/lib.css",rel="stylesheet")
-      link(href="./css/index.css",rel="stylesheet")
+      link(href="./css/gallerygrid.css",rel="stylesheet")
    body
       #grid-gallery.grid-gallery
          section.grid-wrap
@@ -102,4 +102,4 @@ html(lang="en")
             .info-keys.icon Navigate with arrow keys
 
       script(src="./js/lib.js")
-      script(src="./js/index.js")
+      script(src="./js/gallerygrid.js")
