Make font-face optional and build all of the less files in src

--- a/test/index.jade
+++ b/test/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
       title Herosheets Gallery
       link(href="./css/lib.css",rel="stylesheet")
       link(href="./css/gallerygrid.css",rel="stylesheet")
+      link(href="./css/fontawesome-font-face.css",rel="stylesheet")
    body
       #grid-gallery.grid-gallery
          section.grid-wrap
